# AoC

./: .gitignore  README.md
2021/day1/part1/: CMakeLists.txt
2021/day1/part1/src/: Main.cpp
2021/day1/part1/src/headers/: Config.h
2021/day1/part2/: CMakeLists.txt
2021/day1/part2/src/: Main.cpp
2021/day1/part2/src/headers/: Config.h  Config.h.in
2021/day2/part1/: CMakeLists.txt
2021/day2/part1/headers/: Config.h  Config.h.in
2021/day2/part1/src/: Main.cpp
2021/day2/part2/: CMakeLists.txt
2021/day2/part2/headers/: Config.h  Submarine.hpp
2021/day2/part2/src/: Main.cpp
2021/day2/part2/src/submarine/: Submarine.cpp
2021/day3/part1/: CMakeLists.txt
2021/day3/part1/headers/: Config.h.in
2021/day3/part1/headers/submarine/: Submarine.hpp
2021/day3/part1/src/: Main.cpp
2021/day3/part1/src/submarine/diagnostic/: DiagnosticReport.cpp
2021/day3/part2/: CMakeLists.txt
2021/day3/part2/headers/: Config.h
2021/day3/part2/src/: Main.cpp
2021/day4/part1/: CMakeLists.txt
2021/day4/part1/headers/: Config.h  Config.h.in
2021/day4/part1/headers/bingo/: Bingo.hpp  Board.hpp
2021/day4/part1/src/: Main.cpp
2021/day4/part1/src/bingo/: Bingo.cpp  Board.cpp
2021/day4/part1/src/submarine/: Submarine.cpp
2021/day4/part2/: CMakeLists.txt
2021/day4/part2/headers/: Config.h
2021/day4/part2/headers/bingo/: Bingo.hpp  Board.hpp
2021/day4/part2/src/: Main.cpp
2021/day4/part2/src/bingo/: Bingo.cpp  Board.cpp
2021/day5/part1/: CMakeLists.txt
2021/day5/part1/headers/: Config.h  Config.h.in
2021/day5/part1/headers/array/: Purgato.h
2021/day5/part1/headers/hydrothermal/: VentMap.h
2021/day5/part1/src/: Main.cpp
2021/day5/part1/src/array/: Array.cpp  Array2D.cpp
2021/day5/part1/src/hydrothermal/: VentMap.cpp
2021/day5/part2/: CMakeLists.txt
2021/day5/part2/headers/: CoordinateSet.h
2021/day5/part2/headers/hydrothermal/: VentMap.h
2021/day5/part2/src/: Main.cpp
(+5 files in other folders)
